sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeurs()
	inv = true
	var i = 0
	while (ecart <= 1 || inv == true){
		ecart = (ecart.toDouble / 1.3).toInt
		while(i+ecart <= getNombreValeurs()){
			if(plusPetit(i,i+ecart) == false){
				echange(i,i+ecart)
			}
			i += 1
		}
	}
}
